# telegram.py

./: README.md  main.py  pyproject.toml
telegram/client/: __init__.py  bot.py  dispatch.py  polling.py
telegram/client/models/: command.py
telegram/http/: client.py  const.py  request.py  route.py
telegram/http/requests/: __init__.py  client.py  message.py
telegram/models/: attrs_utils.py  protocols.py
telegram/models/telegram/: __init__.py  chat.py  commands.py  keyboard.py  message.py  response.py  update.py  user.py
telegram/utils/: serializer.py  types.py
