[tool.poetry]
name = "another-project"
version = "0.1.0"
description = ""
authors = ["Damego <danyabatueff@gmail.com>"]
readme = "README.md"
packages = [{include = "another_project"}]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.4"
attrs = "^22.2.0"
cattrs = "^22.2.0"
orjson = "^3.8.6"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
